@@ -26,5 +26,4 @@
 
 .timeline32 li.tweet .tweetEditor {
 	padding-left: 33px;
-	width: 325px;
 	}
