@@ -86,5 +86,5 @@ li.tweet a.avatar {
 
 li.tweet .tweetEditor {
 	padding-left: 49px;
-	width: 310px;
+	margin-right: 6px;
 	}
